Fix overlapped margin of card

--- a/src/sass/mobile/_topic.scss
+++ b/src/sass/mobile/_topic.scss
@@ -4,8 +4,8 @@
 
 .topic-body {
   md-card {
-    margin: 8px 4px;
-    
+    margin: 0 4px 15px 4px;
+
     img {
       width: 64px;
       height: auto;
